# counter-linkedin

./: .env.example  .gitignore  AGENTS.md  ANCHOR.md  CLAUDE.md  Cargo.toml  NORTH_STAR.md  README.md  build.rs  wrangler.toml
migrations/: 0001_init.sql  0002_generation_analytics.sql
scripts/: bootstrap.sh  check-deps.sh  rotate-secrets.sh  wrangler-build.sh
src/: api.rs  app.rs  lib.rs
src/components/: home_page.rs  metrics_page.rs  mod.rs
src/server/: access.rs  analytics.rs  entry.rs  mod.rs  rate_limit.rs  state.rs  translate.rs
style/: main.css
